--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ share/python-wheels/
 *.egg
 MANIFEST
 gray_images.npy
+*.npy
+*.tsv000
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
